# AI_PocketCompanion

./: AI_MODEL_INTEGRATION_GUIDE.md  CMakeLists.txt  MODULE_DIRECTORY_DESIGN.md  README.build.md  README.md  build_ubuntu.sh  build_windows.bat  simple_build.bat
build_linux/: AICompanion
docs/: YOLO_MODEL_INTEGRATION_GUIDE.md  camerain_guide.md  chatbot.md  completeworkflow.md  culturespeaker.md  location.md  map_neccessary_analyze.md  sensorgroupdesign.md  visionprocessor.md
include/chat/: Chatbot.h
include/core/: AICompanion.h
include/cultural/: CulturalGuide.h
include/location/: AmapAPI.h  LocationTracker.h
include/sensor/: SensorManager.h
include/vision/: VisionProcessor.h  model_utils.h
src/: main.cpp
src/chat/: Chatbot.cpp
src/core/: AICompanion.cpp
src/cultural/: CulturalGuide.cpp
src/location/: AmapAPI.cpp  LocationTracker.cpp
src/sensor/: SensorManager.cpp
src/vision/: VisionProcessor.cpp  model_utils.cpp
